--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Mi Sitio Web</title>
 </head>
 <body>
-    <h1>Bienvenido a mi sitio web</h1>
-    <img src="https://github.com/leaibarra/imagen-filter/blob/main/filter-svgrepo-com.png" alt="Filter icon">
+    <h1>Este sitio web fue creado para cargar una imagen y así poder usar el URL.</h1>
+    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="background-color: transparent;">
 </body>
 </html>
+
