--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<style>
-    .img{
-        background-color: none;
-    }
-</style>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +8,7 @@
 </head>
 <body>
     <h1>Este sitio web fue creado para cargar una imagen y así poder usar el URL.</h1>
-    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="background-color: transparent;">
+    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="background-color: hsl(0deg 0% 0.15%);">
 </body>
 </html>
 
