--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Este sitio web fue creado para cargar una imagen y así poder usar el URL.</h1>
-    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="background-color: hsl(0deg 0% 0.15%);">
+    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="background-color: hsl(0deg 0% 0.15% / 0%);">
 </body>
 </html>
 
