--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Sitio Web</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: transparent;
+        }
+    </style>
 </head>
 <body>
-    <h1>Este sitio web fue creado para cargar una imagen y así poder usar el URL.</h1>
-    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="background-color: hsl(0deg 0% 0.15% / 0%);">
+    <img src="https://raw.githubusercontent.com/leaibarra/imagen-filter/main/filter-svgrepo-com.png" alt="Filter icon" style="display: block; margin: 0 auto;">
 </body>
 </html>
-
